--- a/html/predict.html
+++ b/html/predict.html
@@ -5,82 +5,165 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Predict - MR.GET HOUSE</title>
   <link rel="stylesheet" href="templatemo-graph-page.css" />
+
+  <!-- ✅ Predict 전용 UI 스타일 -->
+  <style>
+    .predict-card {
+      margin-top: 50px;
+      padding: 40px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 20px;
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    /* ✅ Grid 레이아웃 */
+    .predict-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 15px;
+    }
+
+    /* Row 1: 주소 (전체 너비) */
+    .predict-grid #address {
+      grid-column: 1 / -1;
+    }
+
+    /* Row 3: 주거형태, 거래유형 (왼쪽 2칸만 차지) */
+    .predict-grid #housing_type {
+      grid-column: 1 / 2;
+    }
+
+    .predict-grid #rent_type {
+      grid-column: 2 / 3;
+    }
+
+    /* 공통 스타일 */
+    .predict-grid input,
+    .predict-grid select {
+      padding: 14px 16px;
+      border-radius: 10px;
+      border: none;
+      font-size: 15px;
+    }
+
+    .predict-grid select {
+      cursor: pointer;
+    }
+
+    .predict-actions {
+      margin-top: 30px;
+      text-align: center;
+    }
+
+    .predict-actions button {
+      padding: 14px 36px;
+      font-size: 16px;
+      border-radius: 14px;
+      border: none;
+      cursor: pointer;
+      background: linear-gradient(135deg, #00ffcc, #00ccff);
+      color: #000;
+      font-weight: bold;
+    }
+
+    #resultBox {
+      margin-top: 35px;
+      text-align: center;
+      font-size: 20px;
+      color: #00ffcc;
+    }
+
+    /* 반응형 */
+    @media (max-width: 768px) {
+      .predict-grid {
+        grid-template-columns: 1fr;
+      }
+
+      .predict-grid #address,
+      .predict-grid #housing_type,
+      .predict-grid #rent_type {
+        grid-column: 1 / -1;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
-  <!-- Navigation -->
-  <nav id="navbar">
-    <div class="nav-container">
-      <a href="index.html" class="logo">
-        <div class="logo-icon">
-          <img src="images/hamburger.png" alt="logo" style="width:35px; height:35px;">
-        </div>
-        <span class="logo-text">MR.GET HOUSE</span>
-      </a>
-
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="members.html">Members</a></li>
-        <li><a href="resident.html">Resident</a></li>
-        <li><a href="predict.html" class="active">Predict</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Hero -->
-  <section class="hero no-bg">
-    <div class="hero-bg"></div>
-    <div class="hero-content">
-      <div class="hero-text">
-        <h1>주소 기반 가격 예측</h1>
-        <p>주소와 최소 정보만 입력해 가격을 예측합니다.</p>
+<!-- Navigation -->
+<nav id="navbar">
+  <div class="nav-container">
+    <a href="index.html" class="logo">
+      <div class="logo-icon">
+        <img src="images/hamburger.png" alt="logo" style="width:35px; height:35px;">
       </div>
+      <span class="logo-text">MR.GET HOUSE</span>
+    </a>
+
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="members.html">Members</a></li>
+      <li><a href="resident.html">Resident</a></li>
+      <li><a href="predict.html" class="active">Predict</a></li>
+    </ul>
+  </div>
+</nav>
+
+<!-- Hero -->
+<section class="hero no-bg">
+  <div class="hero-bg"></div>
+  <div class="hero-content">
+    <div class="hero-text">
+      <h1>주소 기반 가격 예측</h1>
+      <p>주소와 최소 정보만 입력해 가격을 예측합니다.</p>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Predict Section -->
-  <section class="Predict-section">
-    <div class="Members-container">
-      <h2 class="section-title">Predict Insights</h2>
+<!-- Predict Section -->
+<section class="Predict-section">
+  <div class="Members-container">
+    <h2 class="section-title">Predict Insights</h2>
 
-      <!-- 입력폼 -->
-      <div style="margin-top:40px; text-align:center;">
+    <!-- 검색 카드 -->
+    <div class="predict-card">
+      <div class="predict-grid">
+        <!-- Row 1: 주소 (전체) -->
         <input id="address" placeholder="주소 (예: 서울특별시 광진구 화양동 111-12)" />
-        <input id="area" placeholder="전용면적(㎡)" />
-        <input id="floor" placeholder="층" />
-        <input id="year_built" placeholder="준공년도 (예: 2005)" />
 
+        <!-- Row 2: 전용면적 / 층 / 준공년도 (3등분) -->
+        <input id="area" type="number" placeholder="전용면적 (㎡)" />
+        <input id="floor" type="number" placeholder="층" />
+        <input id="year_built" type="number" placeholder="준공년도" />
+
+        <!-- Row 3: 주거형태 / 거래유형 (2등분) -->
         <select id="housing_type">
-          <option value="">주거 형태 선택</option>
-          <option value="아파트">아파트</option>
+          <option value="">주거 형태</option>
           <option value="연립다세대">연립다세대</option>
           <option value="오피스텔">오피스텔</option>
         </select>
 
         <select id="rent_type">
-          <option value="">거래 유형 선택</option>
+          <option value="">거래 유형</option>
           <option value="전세">전세</option>
           <option value="월세">월세</option>
         </select>
+      </div>
 
-        <br><br>
-
-        <button id="predictBtn"
-          style="padding:12px 24px; border-radius:10px; border:none;
-          background:linear-gradient(135deg,#00ffcc,#00ccff); color:black; cursor:pointer;">
-          예측하기
-        </button>
+      <!-- 버튼 -->
+      <div class="predict-actions">
+        <button id="predictBtn">예측하기</button>
       </div>
 
       <!-- 결과 -->
-      <div id="resultBox"
-        style="margin-top:40px; text-align:center; font-size:20px; color:#00ffcc;">
-      </div>
+      <div id="resultBox"></div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- ✅ 외부 JS만 사용 -->
-  <script src="js/predict.js" defer></script>
+<!-- ✅ 외부 JS -->
+<script src="js/predict.js" defer></script>
 </body>
 </html>
