--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,8 @@
         <div class="nav-container">
             <a href="index.html" class="logo">
                 <div class="logo-icon">
-    <img src="images/hamburger.png" alt="logo" style="width:35px; height:35px;">
-</div>
+                    <img src="images/hamburger.png" alt="logo" style="width:35px; height:35px;">
+                </div>
                 <span class="logo-text">MR.GET HOUSE</span>
             </a>
 
@@ -23,14 +23,16 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="members.html">Members</a></li>
                 <li><a href="resident.html">Resident</a></li>
-                <li><a href="predict.html">Predict</a></li>
-            </ul>
+                <li>
+                 <a href="https://final-368y.onrender.com/ui/predict.html" target="_blank">
+                Predict
+                </a>
+                </li>
 
-            <div class="hamburger" id="hamburger">
-                <span></span><span></span><span></span>
-            </div>
+            </ul>
         </div>
     </nav>
+
 
 <!-- Hero Section -->
 <section class="hero" id="home">
