--- a/html/members.html
+++ b/html/members.html
@@ -81,7 +81,11 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="members.html" class="active">Members</a></li>
                 <li><a href="resident.html">Resident</a></li>
-                <li><a href="predict.html">Predict</a></li>
+                <li>
+                 <a href="https://final-368y.onrender.com/ui/predict.html" target="_blank">
+                Predict
+                </a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -125,7 +129,7 @@
                 <img src="images/ko.jpg" class="team-img">
                 <div class="team-name">고은혁</div>
                 <div class="team-role">front-end</div>
-                <div class="team-email">ko@konkuk.ac.kr</div>
+                <div class="team-email">gbs08003@konkuk.ac.kr</div>
             </div>
 
             <!-- 김가은 -->
