--- a/html/predict.html
+++ b/html/predict.html
@@ -106,7 +106,11 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="members.html">Members</a></li>
       <li><a href="resident.html">Resident</a></li>
-      <li><a href="predict.html" class="active">Predict</a></li>
+      <li>
+        <a href="https://final-368y.onrender.com/ui/predict.html" target="_blank">
+      Predict
+      </a>
+      </li>
     </ul>
   </div>
 </nav>
