--- a/html/resident.html
+++ b/html/resident.html
@@ -24,7 +24,11 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="members.html">Members</a></li>
                 <li><a href="resident.html" class="active">Resident</a></li>
-                <li><a href="predict.html">Predict</a></li>
+                <li>
+                 <a href="https://final-368y.onrender.com/ui/predict.html" target="_blank">
+                Predict
+                </a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -62,7 +66,7 @@
                 <!-- 주소 방식 -->
                 <div class="search-section">
                     <label class="label-title">주소 방식</label><br>
-                    <label><input type="radio" name="addrType" value="지번"> 지번</label>
+
                     <label><input type="radio" name="addrType" value="도로명" checked> 도로명</label>
                 </div>
 
