--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
 <section class="hero" id="home">
     <div class="hero-inner">
         <div class="hero-text">
-            <h1>부동산 구매나 판매를 생각하고 계신가요?</h1>
+            <h1>글자 이 부분 바꿨습니다</h1>
             <h2>그렇다면 제대로 찾아오셨습니다.</h2>
         </div>
 
